gccida/c3/strength_reduce
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5479:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5479:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5484:4: error: expected ';' after expression
rtx v87; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5484:5: error: use of undeclared identifier 'v87'
rtx v87; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5485:4: error: expected ';' after expression
rtx v88; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5485:5: error: use of undeclared identifier 'v88'
rtx v88; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5487:4: error: expected ';' after expression
rtx v90; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5487:5: error: use of undeclared identifier 'v90'
rtx v90; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5517:4: error: expected ';' after expression
rtx v120; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5517:5: error: use of undeclared identifier 'v120'
rtx v120; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5551:6: error: use of undeclared identifier 'v154'
rtx *v154; // r15 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5592:4: error: expected ';' after expression
rtx v195; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5592:5: error: use of undeclared identifier 'v195'
rtx v195; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5608:4: error: expected ';' after expression
rtx v211; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5608:5: error: use of undeclared identifier 'v211'
rtx v211; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5612:4: error: expected ';' after expression
rtx v215; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5612:5: error: use of undeclared identifier 'v215'
rtx v215; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5613:4: error: expected ';' after expression
rtx v216; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/loop.c:5613:5: error: use of undeclared identifier 'v216'
rtx v216; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/strength_reduce/src/obj/loop.o] Error 1
